--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -23,7 +23,45 @@ linter:
   # producing the lint.
   rules:
     # avoid_print: false  # Uncomment to disable the `avoid_print` rule
-    # prefer_single_quotes: true  # Uncomment to enable the `prefer_single_quotes` rule
+    - prefer_single_quotes
+    - camel_case_types
+    - camel_case_extensions
+    - library_prefixes
+    - non_constant_identifier_names
+    - constant_identifier_names
+    - directives_ordering
+    - lines_longer_than_80_chars
+    - curly_braces_in_flow_control_structures
+    - slash_for_doc_comments
+    - package_api_docs
+    - public_member_api_docs
+    - comment_references
+    - use_string_in_part_of_directives
+    - implementation_imports
+    - avoid_relative_lib_imports
+    - prefer_relative_imports
+    - avoid_init_to_null
+    - prefer_adjacent_string_concatenation
+    - prefer_interpolation_to_compose_strings
+    - unnecessary_brace_in_string_interps
+    - prefer_collection_literals
+    - prefer_is_empty
+    - prefer_is_not_empty
+    - avoid_function_literals_in_foreach_calls
+    - prefer_iterable_whereType
+    - prefer_function_declarations_over_variables
+    - unnecessary_lambdas
+    - prefer_equal_for_default_values
+    - unnecessary_getters_setters
+    - prefer_expression_function_bodies
+    - unnecessary_this
+    - prefer_initializing_formals
+    - empty_constructor_bodies
+    - unnecessary_new
+    - unnecessary_const
+    - avoid_catches_without_on_clauses
+    - avoid_catching_errors
+    - use_rethrow_when_possible
 
 # Additional information about this file can be found at
 # https://dart.dev/guides/language/analysis-options
