--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,14 +28,21 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  drift: 2.10.0
   flutter:
     sdk: flutter
+  get_it: 7.6.0
+  path_provider: 2.0.0
+  path: 1.8.3
+  sqlite3_flutter_libs: 0.5.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
 
 dev_dependencies:
+  build_runner: 2.4.6
+  drift_dev: 2.10.0
   flutter_test:
     sdk: flutter
 
