--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,13 +28,19 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
-  drift: 2.10.0
+  cached_network_image: 3.2.3
+  dartz: 0.10.1
+  drift:
+  drift_dev: 2.10.0
+  drift_db_viewer: 2.0.0
   flutter:
     sdk: flutter
   get_it: 7.6.0
   path_provider: 2.0.0
   path: 1.8.3
+  provider: 6.0.5
   sqlite3_flutter_libs: 0.5.0
+  shared_preferences: 2.2.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
